<resources>
    <string name="app_name">Task</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_login">Login</string>
    <string name="title_navigate_main">Navigate Main</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="no_account">No Account?</string>
    <string name="register">Register</string>
    <string name="skip">Skip</string>
    <string name="txt_description">Description</string>
    <string name="txt_title">Task title</string>
    <string name="txt_date">Task date</string>
    <string name="txt_color">Task color</string>
    <string name="txt_create">Create Task</string>
    <string name="txt_delete">Delete Task</string>
    <string name="txt_update">Update Task</string>
    <string name="txt_list">List Task</string>
    <string name="txt_note">Note</string>
    <string name="txt_done">Done</string>
    <string name="txt_delete_task">Delete</string>
    <string name="txt_from_date">From date</string>
    <string name="txt_to_date">To date</string>
</resources>