<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/topBg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inputGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/input_box_bg"
        android:padding="30dp"
        app:layout_constraintTop_toBottomOf="@id/title">


        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/please_enter_email"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/pwdEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/please_enter_password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/userNameEditText" />

        <ImageView
            android:id="@+id/pwdIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_baseline_remove_red_eye_24"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="@id/pwdEditText"
            app:layout_constraintEnd_toEndOf="@id/pwdEditText"
            app:layout_constraintTop_toTopOf="@id/pwdEditText" />


        <EditText
            android:id="@+id/pwdReEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:hint="Please enter password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/pwdEditText" />

        <ImageView
            android:id="@+id/pwdReIcon"
            android:layout_width="22dp"
            android:layout_height="13dp"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="@id/pwdReEditText"
            app:layout_constraintEnd_toEndOf="@id/pwdReEditText"
            app:layout_constraintTop_toTopOf="@id/pwdReEditText" />


        <androidx.constraintlayout.widget.Group
            android:id="@+id/pwdReGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="pwdReEditText,pwdReIcon" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginRegisterBtn"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:paddingBottom="7dp"
            android:shadowColor="@android:color/darker_gray"
            android:text="@string/title_login"
            android:textColor="#fff"
            android:textSize="18sp"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pwdReEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/hintLineRight"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@id/noAccountHint"
        app:layout_constraintEnd_toStartOf="@id/noAccountHint"
        app:layout_constraintStart_toStartOf="@id/inputGroup"
        app:layout_constraintTop_toTopOf="@id/noAccountHint" />

    <View
        android:id="@+id/hintLineLeft"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@id/noAccountHint"
        app:layout_constraintEnd_toEndOf="@id/inputGroup"
        app:layout_constraintStart_toEndOf="@id/noAccountHint"
        app:layout_constraintTop_toTopOf="@id/noAccountHint" />

    <TextView
        android:id="@+id/noAccountHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/no_account"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/registerBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/register"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/skipBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/skipBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/skip"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>